# AuditRAG-an-evaluation-pipeline

./: MODEL_CARD.md  README.md  app_streamlit.py  demo.py  main.py  pyproject.toml
src/: config.py  pipeline.py  pyproject.toml
src/api/: app.py
src/evaluation/: evaluator.py
src/generation/: generator.py
src/ingestion/: ingestor.py
src/knowledge_graph/: kg_builder.py
src/retrieval/: retriever.py
test/: test_pipeline.py
