[project]
name = "auditrag-an-evaluation-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markitdown>=0.1.6",
    "mlflow>=3.12.0",
    "pydantic-settings>=2.14.1",
    "rank-bm25>=0.2.2",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.uv.workspace]
members = [
    "src",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
