[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pymupdf>=1.27.2.3",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.0",
    "spacy>=3.8.14",
    "transformers>=5.8.1",
    "uvicorn[standard]>=0.34.0",
]
